--- a/index.html
+++ b/index.html
@@ -53,40 +53,40 @@
  <!-- The slideshow -->
 <div class="carousel-inner img-responsive">
   <div class="carousel-item active">
-    <img class="d-block" src="images/slide1.png" alt="1st slide">
+    <img class="d-block" src="/images/slide1.png" alt="1st slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block" src="images/slide2.png" alt="2nd slide">
+    <img class="d-block" src="/images/slide2.png" alt="2nd slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block" src="images/slide3.png" alt="3rd slide">
+    <img class="d-block" src="/images/slide3.png" alt="3rd slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block" src="images/slide4.png" alt="4th slide">
+    <img class="d-block" src="/images/slide4.png" alt="4th slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block " src="images/slide5.png" alt="5th slide">
+    <img class="d-block " src="/images/slide5.png" alt="5th slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block " src="images/slide6.png" alt="6th slide">
+    <img class="d-block " src="/images/slide6.png" alt="6th slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block " src="images/slide7.png" alt="7th slide">
+    <img class="d-block " src="/images/slide7.png" alt="7th slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block " src="images/slide8.png" alt="8th slide">
+    <img class="d-block " src="/images/slide8.png" alt="8th slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block " src="images/slide9.png" alt="9th slide">
+    <img class="d-block " src="/images/slide9.png" alt="9th slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block " src="images/slide10.png" alt="10th slide">
+    <img class="d-block " src="/images/slide10.png" alt="10th slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block " src="images/slide11.png" alt="11th slide">
+    <img class="d-block " src="/images/slide11.png" alt="11th slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block " src="images/slide12.png" alt="12th slide">
+    <img class="d-block " src="/images/slide12.png" alt="12th slide">
   </div>
 </div>
 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
