--- a/index.html
+++ b/index.html
@@ -36,40 +36,40 @@
  <!-- The slideshow -->
 <div class="carousel-inner img-responsive">
   <div class="carousel-item active">
-    <img class="d-block" src="images/slide1.png" alt="1st slide">
+    <img class="d-block" src="images/Slide1.png" alt="1st slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block" src="images/slide2.png" alt="2nd slide">
+    <img class="d-block" src="images/Slide2.png" alt="2nd slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block" src="images/slide3.png" alt="3rd slide">
+    <img class="d-block" src="images/Slide3.png" alt="3rd slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block" src="images/slide4.png" alt="4th slide">
+    <img class="d-block" src="images/Slide4.png" alt="4th slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block " src="images/slide5.png" alt="5th slide">
+    <img class="d-block " src="images/Slide5.png" alt="5th slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block " src="images/slide6.png" alt="6th slide">
+    <img class="d-block " src="images/Slide6.png" alt="6th slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block " src="images/slide7.png" alt="7th slide">
+    <img class="d-block " src="images/Slide7.png" alt="7th slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block " src="images/slide8.png" alt="8th slide">
+    <img class="d-block " src="images/Slide8.png" alt="8th slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block " src="images/slide9.png" alt="9th slide">
+    <img class="d-block " src="images/Slide9.png" alt="9th slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block " src="images/slide10.png" alt="10th slide">
+    <img class="d-block " src="images/Slide10.png" alt="10th slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block " src="images/slide11.png" alt="11th slide">
+    <img class="d-block " src="images/Slide11.png" alt="11th slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block " src="images/slide12.png" alt="12th slide">
+    <img class="d-block " src="images/Slide12.png" alt="12th slide">
   </div>
 </div>
 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
